# csiro-biomass

./: .gitignore  Readme.md  pyproject.toml
Notebooks/: dinov3_classical_models.ipynb  eda.ipynb  filter_dataset.ipynb  hybrid_model.ipynb  inference.ipynb
best_notebooks/: dinov3-no-tta-postprocess.ipynb  ensemble-siglip-with-dinov3-lb-0-71.ipynb
final_submission/: csiro-inference-final.ipynb
scripts/: analyze_image.py  build_dataset.py  calibrate_prediction.py  data_split.py  inference.py  loss_functions.py  metrics.py  oof_hybrid_model.py  oof_structured_model.py  train.py  train_classical.py  utils.py
scripts/models/: dinov3_mamba_2_tiles.py  dinov3_multi_reg.py  dinov3_multi_reg_structured.py
scripts/models/timm_model/: model.py
scripts/models/vit_0/: infer.py  model.py
